--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#7d40e7" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     
-    <title>Dev Radar</title>
+    <title>DevRadar</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
